--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,9 @@ android {
 }
 
 dependencies {
+    // GSON
+    implementation 'com.google.code.gson:gson:2.8.5'
+
     // RecyclerView, Design support
     implementation 'com.android.support:recyclerview-v7:25.0.0'
     implementation 'com.android.support:design:25.0.0'
