--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,11 +26,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 26
     defaultConfig {
         applicationId "me.francescotonini.beaconservice"
         minSdkVersion 21
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -51,28 +51,23 @@ android {
 dependencies {
     // GSON
     implementation 'com.google.code.gson:gson:2.8.5'
-
     // RecyclerView, Design support
-    implementation 'com.android.support:recyclerview-v7:25.0.0'
-    implementation 'com.android.support:design:25.0.0'
-    implementation 'com.android.support:support-v4:25.0.0'
-    implementation 'com.android.support:appcompat-v7:25.0.0'
-    implementation 'com.android.support:preference-v7:25.0.0'
-    implementation 'com.android.support:preference-v14:25.0.0'
-
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:preference-v7:26.1.0'
+    implementation 'com.android.support:preference-v14:26.1.0'
     // ViewModel and Live Data
-    implementation "android.arch.lifecycle:extensions:1.1.0"
-    implementation "android.arch.lifecycle:livedata:1.1.0"
-    annotationProcessor "android.arch.lifecycle:compiler:1.1.0"
-
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'android.arch.lifecycle:livedata:1.1.1'
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
     // Room
-    implementation "android.arch.persistence.room:runtime:1.0.0"
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
-
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
     // Altbeacon
     implementation 'org.altbeacon:android-beacon-library:2.14'
-
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
