--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,7 @@
             </intent-filter>
         </activity>
         <receiver android:name=".receivers.WifiReceiver" />
+        <receiver android:name=".services.AutoSaverReceiver" />
     </application>
 
 </manifest>
